[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.10.4"
ipython = "^8.22.2"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pymongo = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
